
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ Y3IxL2; } ;
typedef TYPE_2__ oSdJm ;
struct TYPE_5__ {unsigned long dZK6h3; } ;
struct TYPE_7__ {unsigned long P3rGX3; unsigned long PGh3e4; unsigned long YOy672; unsigned long y8QlL; TYPE_1__ e6VgP3; } ;
typedef TYPE_3__ LbJOV ;



void __attribute__((cdecl))TAU32_BeforeReset(oSdJm*
YRHFy){{if(!(YRHFy))goto AbRV73;{volatile LbJOV*fV7o35=(volatile LbJOV
 * )YRHFy->Y3IxL2;{if(!(fV7o35))goto G2b703;{fV7o35->P3rGX3=~0ul;
fV7o35->PGh3e4=0ul;fV7o35->e6VgP3.dZK6h3=0ul;fV7o35->YOy672=~0ul;
fV7o35->y8QlL=0ul;}G2b703:;}}AbRV73:;}}
